--- a/user_profile.html
+++ b/user_profile.html
@@ -75,13 +75,11 @@
 
     <section class="profile-centered">
       <div class="header-container" id="banner">
-        <img id="default" src="./img/banner.png">
       </div>
       <div class="profile-info">
         <span id="profile">
-          <img src="./img/profile-pic.png">
         </span>
-        <h2 class="name" id="name"></h2>
+        <h2 class="name" id="name">New User</h2>
         <p class="account" id="account"></p>
         <p class="description" id="description"></p>
         <ul class="nav-user">
