--- a/create.html
+++ b/create.html
@@ -83,6 +83,7 @@
         <h4>Image, Video, or Audio<span class="star"> *</span></h4>
         <p><b>File types supported:</b> JPG, JPEG, PNG.</p>
         <p><b>Recommended:</b> 350px x 350px | <b>Max size:</b> 100 MB</p>
+        <p><b>Transaction Fee:</b> 10 BLX</p>
 
         <div class="form-div">
           <label for="image">
