--- a/buyNow.html
+++ b/buyNow.html
@@ -94,7 +94,7 @@
         <span id="error" style="color:red;margin-top: 6px;"></span>
 
         <div class="form-btn">
-          <button class="btn btn-dark" style="margin-top:-12px" type="submit">Submit</button>
+          <button class="btn btn-dark" style="margin-top:-12px" type="submit">Buy Now</button>
         </div>
       </form>
     </section>
