--- a/review.html
+++ b/review.html
@@ -97,7 +97,7 @@
            <span id="price"></span> <span id="currency"></span><br/>
           <label>Balance Verified:</label> <span id="balanceVerified" style="color:red">No</span><br/>
           <label>Deadline:</label>
-          <span id="date"></span>
+          <span id="date"></span><br/>
           <label>Fee:</label> <span>1.01 BLX</span>
           <span id="d" style="display:none;"></span>
           <span id="n" style="display:none;"></span>
