--- a/user_profile.html
+++ b/user_profile.html
@@ -77,8 +77,9 @@
       <div class="header-container" id="banner">
       </div>
       <div class="profile-info">
-        <span id="profile"></span>
-        <h2 class="name" id="name"></h2>
+        <span id="profile">
+        </span>
+        <h2 class="name" id="name">New User</h2>
         <p class="account" id="account"></p>
         <p class="description" id="description"></p>
         <ul class="nav-user">
