Add search function

--- a/acceptBid.html
+++ b/acceptBid.html
@@ -31,20 +31,12 @@
         <div class="navbar-nav-right">
           <div class="navbar-search-bar">
             <span class="material-icons md-24">search</span>
-            <input
-              class="search-bar"
-              type="text"
-              placeholder=" Search items,collections,and accounts"
-            />
+            <input id="search" class="search-bar" type="text" placeholder=" Search NFT's and accounts"/>
           </div>
           <div class="navbar-items" id="menu">
             <div class="navbar-search-bar-hidden menuItem">
               <span class="material-icons md-24">search</span>
-              <input
-                class="search-bar"
-                type="text"
-                placeholder=" Search items,collections,and accounts"
-              />
+              <input id="search1" class="search-bar" type="text" placeholder=" Search NFT's and accounts"/>
             </div>
             <ul>
               <li>
