--- a/search.html
+++ b/search.html
@@ -18,26 +18,27 @@
         <div class="navbar-nav-left">
           <div class="navbar-brand">
             <img src="img/blue0x.png" alt="Blue0x logo" />
-            <a href="index.html"><p class="logo">Blue0x<span> Market</span></p></a>
+            <a href="index.html"><p class="logo">Blue0x<span> NFT</span></p></a>
           </div>
         </div>
 
         <div class="navbar-nav-right">
           <div class="navbar-search-bar">
             <span class="material-icons md-24">search</span>
-            <input id="search" class="search-bar" type="text" placeholder=" Search items and accounts" />
+            <input id="search" class="search-bar" type="text" placeholder=" Search NFT's and accounts"/>
+
           </div>
           <div class="navbar-items" id="menu">
             <div class="navbar-search-bar-hidden menuItem">
               <span class="material-icons md-24">search</span>
-              <input id="search1" class="search-bar" type="text" placeholder=" Search items and accounts"/>
+              <input id="search1" class="search-bar" type="text" placeholder=" Search NFT's and accounts"/>
             </div>
             <ul>
               <li>
-                <a class="menuItem" href="categories.html">Browse</a>
+                <a class="menuItem" href="explore.html">Explore</a>
               </li>
               <li>
-                <a class="menuItem" href="create.html">Sell</a>
+                <a class="menuItem" href="create.html">Create</a>
               </li>
               <li>
                 <a class="menuItem" href="resources.html">Resources</a>
@@ -63,6 +64,7 @@
         <i class="closeIcon material-icons nav-icon" id="close">close</i>
       </button>
     </nav>
+    
     <section class="pages">
       <div class="page-heading">
         <h1 id="query"></h1>
